--- a/example/mix-pipeline/pipelineTask2.yaml
+++ b/example/mix-pipeline/pipelineTask2.yaml
@@ -16,7 +16,7 @@ tasks:
   # k8s 任务打印入参
   - alias: print-input
     type: k8s
-    image: kakj/mc
+    image: docker.io/kakj/mc
     commands:
       - echo "${{ inputs.input-env }}"
       - cat ${{ inputs.input-file }}
