--- a/example/hello-world/docker-compose.yml
+++ b/example/hello-world/docker-compose.yml
@@ -12,11 +12,11 @@ services:
       - net
     environment:
       debug: true
-      EVENTOPS_CALLBACK_ADDRESS: http://eventops:8080
+      EVENTOPS_CALLBACK_ADDRESS: http://[ip]:8080 # 需要能被 task 的执行宿主机访问
       MYSQL_USER: root
       MYSQL_PASSWORD: 123456
       MYSQL_ADDRESS: mysql
-      MINIO_SERVER: http://minio:9000
+      MINIO_SERVER: http://[ip]:9000 # 需要能被 task 的执行宿主机访问。 虽然下面启动了 minio, 这里如果使用 http://minio:9000 那么当 task 宿主机无法解析 minio dns，那么执行可能会报错
       MINIO_ACCESS_KEY: root
       MINIO_SECRET_KEY: 1234567890
     volumes:
@@ -58,7 +58,9 @@ services:
       - mysql
     networks:
       - net
-    command: mysqlsh --user=root --password=123456 --host=mysql --database=eventops --port=3306 --file=/migrations/eventops.sql
+    command: sh -c "if [ ! -f "/migrations/status/down" ]; then mysqlsh --user=root --password=123456 --host=mysql --database=eventops --port=3306 --file=/migrations/eventops.sql; echo "down" > /migrations/status/down; fi"
+    volumes:
+      - migrations-down:/migrations/status
     depends_on:
       mysql:
         condition: service_healthy
@@ -90,3 +92,4 @@ volumes:
   minio-data:
   minio-config:
   eventops-config:
+  migrations-down:
